# Aruna

./: .gitignore  .gitmodules  .gitmodules-23  CMakeLists.txt  Doxyfile  Makefile  arunaConfig.cmake  component.mk  platformio.ini  readme.md
docs/: arcom.md  arcomm.md  communication.md  control.md
example/: Makefile  readme.md  sdkconfig.defaults
example/main/: component.mk  main.cpp
include/: Com.h  ComDriver.h  Engine.h  aruna.h  com.h  control.h  main.h
include/aruna/: Com.h  arunaTypes.h  blinky.h  comm.h  control.h  controlTypes.h  log.h  movement.h  sis.h
include/aruna/FreeRTOS/: FreeRTOSKernel.h
include/aruna/comm/: CommDriver.h  Link.h  commTypes.h
include/aruna/comm/portable/esp32/: UART.h
include/aruna/comm/portable/posix/: Serial.h  SerialPosix.h
include/aruna/control/: Actuator.h  ActuatorSet.h  ControlActuatorDriver.h  DriverSet.h  PCA9685.h  Stepper.h  controlTypes.h
include/aruna/control/portable/esp32/: Dshot.h  Pwm.h  Stepper.h
include/aruna/driver/: ADC.h  ADC.hpp  ADS101x.h  Dshot.h  I2C_master.h  PCA9685.h  Pwm.h  Stepper.h  UART.h
include/aruna/driver/ADS101x/: ADS101x_map.h
include/aruna/driver/PCA9685/: PCA9685.h  PCA9685_map.h
include/aruna/driver/port/ESP32/: Dshot.h  ESP32_I2C_master.h  ESP32_MCPwm.h  ESP32_RMT_Dshot.h  ESP32_Stepper.h  ESP32_UART.h
include/aruna/driver/port/POSIX/: POSIX_UART.h
include/aruna/driver/port/cross_platform/: FT_I2C.h
include/aruna/drivers/com/: ComDriver.h  UART.h
include/aruna/drivers/comm/: CommDriver.h  SerialPosix.h  UART.h
include/aruna/drivers/control/: ControlActuatorDriver.h  DriverSet.h  L293D.h  Pwm.h
include/aruna/movement/: Actuator.h  ActuatorSet.h  movementTypes.h
include/aruna/sensor/: Rain40x16.h  Water.h
include/aruna/sis/: ADS101xWaterSensor.h  Performer.h  reporter.h  sisTypes.h  watcher.h
include/aruna/sis/portable/esp32/: WaterSensor.h
include/drivers/: Com.h
include/drivers/com/: ComDriver.h  UART.h
include/drivers/control/: ControlActuatorDriver.h
libs/: FreeRTOS-SimConfig.cmake
main/: CMakeLists.txt  component.mk  main.cpp  main.h
main/app/: Com.cpp  blinky.cpp
main/drivers/: Com.cpp  Com.h
main/drivers/com/: ComDriver.h  UART.cpp  UART.h
main/drivers/control/: L293D.cpp  control.cpp
main/include/: main.h
main/include/app/: Com.h  blinky.h
main/include/drivers/: control.h
main/include/drivers/com/: ComDriver.h  UART.h
main/include/drivers/control/: ControlAcceleratorDriver.h  ControlActuatorDriver.h  L293D.h  control.h
src/: Com.cpp  Engine.c  FreeRTOSKernel.cpp  blinky.cpp  comm.cpp  control.c  control.cpp  log.cpp  main.c  main.cpp
src/blinky/: blinky.cpp
src/comm/: Link.cpp  comm.cpp
src/comm/portable/esp32/: UART.cpp
src/comm/portable/posix/: Serial.cpp  SerialPosix.cpp
src/control/: Actuator.cpp  ActuatorSet.cpp  DriverSet.cpp  PCA9685.cpp  Stepper.cpp  control.cpp
src/control/portable/esp32/: Dshot.cpp  Pwm.cpp  Stepper.cpp
src/driver/: ADC.cpp  ADS101x.cpp  Dshot.cpp  I2C_master.cpp  PCA9685.cpp  Pwm.cpp  Stepper.cpp  UART.cpp
src/driver/ADS101x/: ADS101x.cpp
src/driver/ADS101x/portable/ESP32/: ADS101x_ESP32.cpp
src/driver/PCA9685/portable/ESP32/: PCA9685_ESP32.cpp
src/driver/port/ESP32/: Dshot.cpp  ESP32_I2C_master.cpp  ESP32_MCPwm.cpp  ESP32_RMT_Dshot.cpp  ESP32_Stepper.cpp  ESP32_UART.cpp
src/driver/port/POSIX/: POSIX_UART.cpp
src/driver/port/cross_platform/: FT_I2C.cpp
src/drivers/: Com.cpp
src/drivers/com/: UART.cpp
src/drivers/comm/: SerialPosix.cpp  UART.cpp
src/drivers/control/: DriverSet.cpp  L293D.cpp  Pwm.cpp
src/log/: log.cpp
src/movement/: Actuator.cpp  ActuatorSet.cpp  movement.cpp
src/sensor/: Rain40x16.cpp  Water.cpp
src/sis/: ADS101xWaterSensor.cpp  Performer.cpp  Water.cpp  reporter.cpp  watcher.cpp
src/sis/portable/esp32/: WaterSensor.cpp
test/: test.cpp
test/STM32F103C8Tx/: .cproject  .mxproject  CMakeLists.txt  STM32F103C8Tx.ioc  STM32F103C8Tx.xml  STM32F103C8Tx_FLASH.ld
test/STM32F103C8Tx/Src/: main.cpp
test/STM32F103CBTx/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F103CBTx.ioc  STM32F103CBTx.xml
test/STM32F103CBTx/EWARM/: Project.eww  STM32F103CBTx.ewd  STM32F103CBTx.ewp
test/comm/: LinkTest.cpp
test/control/: ActuatorSetTest.cpp  ActuatorTest.cpp  MockActuator.h
test/driver/: ADCTest.cpp  ADS101xTest.cpp  MockADC.h  MockI2C_master.h
test/driver/cross_platform/: FT_I2CTest.cpp
test/log/: LogTest.cpp  testLog.cpp
test/movement/: ActuatorSetTest.cpp  ActuatorTest.cpp  MockActuator.h
